feat: Preparing CSS for Landing page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,8 +3,7 @@
 @tailwind utilities;
 
 .loginBackground {
-  background: url("../../public/img/loginBackground.png") no-repeat center
-    center fixed;
+  background: url("../../img/loginBackground.jpg") no-repeat center center fixed;
   background-size: cover;
   height: 100%;
   width: 100%;
