feat: Preparing error view

--- a/packages/front/assets/css/main.css
+++ b/packages/front/assets/css/main.css
@@ -12,3 +12,17 @@
   left: 0;
   z-index: -1;
 }
+
+/* Slide in */
+@keyframes slide-in {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.animate-slide-in {
+  animation: slide-in 0.5s ease-out;
+}
